--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(ATMega_TWI)
 #============================================================================================
 SET(DEVICE      atmega2560)     #Microcontroller model
 SET(FREQ        16000000)       #Frequency
-SET(FLASH       YES)            #Turn on/off flashing
+SET(FLASH       NO)            #Turn on/off flashing
 SET(BAUD        115200)         #Set flashing baud rate
 SET(PROGRAMMER  wiring)         #Programmer
 set(PORT        /dev/ttyACM1)   #Insert port number
